Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Umasslowell-vision-group.github.io : ">
+    <meta name="description" content="Umass Lowell Vision Group : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Umasslowell-vision-group.github.io</title>
+    <title>Umass Lowell Vision Group</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/UMassLowell-Vision-Group">View on GitHub</a>
 
-          <h1 id="project_title">Umasslowell-vision-group.github.io</h1>
+          <h1 id="project_title">Umass Lowell Vision Group</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
