Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -7,29 +7,31 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header class="without-description">
         <h1>Umass Lowell Vision Group</h1>
         <p></p>
-
-
-        <p class="view"><a href="https://github.com/UMassLowell-Vision-Group">View My GitHub Profile</a></p>
-
+        <p class="view"><a href="https://github.com/UMassLowell-Vision-Group">View the Project on GitHub <small>UMassLowell-Vision-Group</small></a></p>
+        <ul>
+          <li class="single"><a href="https://github.com/UMassLowell-Vision-Group/umasslowell-vision-group.github.io">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
       <section>
         <p>Welcome to the UMass Lowell Computer Vision and Machine Learning Group!</p>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <footer>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
