--- a/xpeng.html
+++ b/xpeng.html
@@ -31,8 +31,7 @@
 		.code strong a { color : #000; }
 		.external a { margin : 0 10px; }
 		.external a.first { margin : 0 10px 0 0; }
-		.personal {width:100px;height:100px;}
-		.pfloat {float:left;margin: 20px 100px 20px 1px;}
+		.personal{width:100px;height:100px;}
 	</style>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -60,7 +59,7 @@
 		<div style="width:10%;float:left;display:inline;" align="left">
 		<ul style="width:100px;" id="menu">
 		<li style="background-color:#50b7c1"><a href="index.html">Home</a></li>	
-		<li style="background-color:#afdfe4"><a href="people.html">People</a>
+		<li style="background-color:#afdfe4">People
 			<!--ul>
 				<li style="width:150px;background-color:#afb4db"><a href="ksaenko.html">Kate Saenko</a></li>
 				<li style="width:150px;background-color:#9b95c9"><a href="bsun.html">Baochen Sun</li>
@@ -96,25 +95,7 @@
 						</div>
 					<br/>
 					<h2>Members</h2>
-						<div class="pfloat">
-							<a href="karim.html">
-							<img class="personal" src="images/default.png"/>
-							<div>Karim Ali<br/> (Post Doc)</div>
-							</a>
-						</div>
-						<div class="pfloat">
-							<a href="bsun.html">
-							<img class="personal" src="images/default.png"/>
-							<div>Baochen Sun<br/> (PhD Student)</div>
-							</a>
-						</div>
-						<div class="pfloat">
-							<a href="huijuan.html">
-							<img class="personal" src="images/default.png"/>
-							<div>Huijuan Xu<br/> (PhD Student)</div>
-							</a>
-						</div>
-						<div class="pfloat">
+						<div>
 							<a href="xpeng.html">
 							<img class="personal" src="images/default.png"/>
 							<div>Xingchao Peng<br/> (PhD Student)</div>
@@ -144,9 +125,7 @@
 	
 	
     <footer>
-      <p>
-		Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>
-	  </p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
