--- a/bsun.html
+++ b/bsun.html
@@ -81,6 +81,7 @@
 		<div style="width:90%;float:left;display:inline;" id="alternative">
 		<!--alternative section begin, edit you own page here-->
 			<h2>Baochen Sun</h2>
+			<a href="http://www.cs.uml.edu/~bsun/">Personal Page</a>
 				
 		<!--end of alternative section-->
 		</div>
