--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						</div>
 						<div class="pfloat">
 							<a href="bsun.html">
-							<img class="personal" src="images/default.png"/>
+							<img class="personal" src="images/bsun.png"/>
 							<div>Baochen Sun<br/> (PhD Student)</div>
 							</a>
 						</div>
