--- a/people.html
+++ b/people.html
@@ -69,7 +69,7 @@
 	    <table style="width:100%">
 	      <tr>
 		<td><a href="ksaenko.html"><img src="images/kate.gif" width="100" height="100"/></a></td>
-		<td><a href="bsun.html"><img class="personal" src="images/bsun.jpg"/></a></td> 
+		<td><a href="http://www.cs.uml.edu/~bsun/"><img class="personal" src="images/bsun.jpg"/></a></td> 
 		<td><a href="xpeng.html"><img class="personal" src="images/default.png"/></a></td> 
 		<td><a href="huijuan.html"><img class="personal" src="images/default.png"/></a></td> 
 		<td><a href="ramanishka.html"><img class="personal" src="images/default.png"/></a></td> 
