--- a/people.html
+++ b/people.html
@@ -45,18 +45,11 @@
 	<!--Menu Part begin-->
 	<div style="width:10%;float:left;display:inline;" align="left">
 	<ul style="width:120px;" id="menu">
-	<li style="background-color:#50b7c1"><a href="index.html">Home</a></li>	
-	<li style="background-color:#afdfe4"><a href="people.html">People</a>
-		<!--ul>
-			<li style="width:150px;background-color:#afb4db"><a href="ksaenko.html">Kate Saenko</a></li>
-			<li style="width:150px;background-color:#9b95c9"><a href="bsun.html">Baochen Sun</li>
-			<li style="width:150px;background-color:#7bbfea"><a href="huijuan.html">Huijuan Xu</li>
-			<li style="width:150px;background-color:#afdfe4"><a href="xpeng.html">Xingchao Peng</a></li>
-		</ul-->
-	</li>
-	<li style="background-color:#50b7c1"><a href="research.html">Research</a></li>	
+	<li style="background-color:#F4F4FC"><a href="index.html">Home</a></li>	
+	<li style="background-color:#afdfe4"><a href="people.html">People</a></li>
+	<li style="background-color:#F4F4FC"><a href="research.html">Research</a></li>	
 	<li style="background-color:#afdfe4"><a href="publication.html">Publications</a></li>	
-	<li  style="background-color:#50b7c1"><a href="teaching.html">Teaching</a></li>
+	<li style="background-color:#F4F4FC"><a href="teaching.html">Teaching</a></li>
 	</ul>
 	</div>		
 	<!--Menu end-->
