--- a/adaptation.html
+++ b/adaptation.html
@@ -136,7 +136,7 @@ In Proc. IEEE Conference on Computer Vision and Pattern Recognition
 <br>
 K. Saenko, B. Kulis, M. Fritz and T.Darrell, <a href="http://www.cs.uml.edu/~saenko/saenko_eccv_2010.pdf">"Adapting
 Visual Category Models to New Domains"</a> In Proc. ECCV, September 2010, Heraklion,
-Greece. [<a href="http://www.cs.uml.edu/~saenko/code/DomainTransformsECCV10_v1.tar.gz">code</a>]
+Greece. [<a href="./code/DomainTransformsECCV10_v1.tar.gz">code</a>]
 [<a href="https://www.eecs.berkeley.edu/~jhoffman/domainadapt/#datasets_code">more code</a>].
 
         <!--******************************************-->
