--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<!--begin page content, edit you own page here-->
 
 	
-	    <p>Welcome to the <a href="index.html">Computer Vision and Machine Learning Group</a> 
+	    <p>Welcome to Prof. Saenko's <a href="index.html">Computer Vision and Machine Learning Group</a> 
 	      at the <a href="www.cs.uml.edu">Computer Science Department</a> of 
 	      <a href="www.uml.edu">Umass Lowell</a>. 
 	    </p>				
@@ -66,9 +66,9 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
-	      <li> Kate is co-organizing the <a href="">Future of Datasets in Vision Workshop</a> at CVPR 2015 on June 11th, 2015 in Boston, MA.
+	      <li> I am co-organizing the <a href="">Future of Datasets in Vision Workshop</a> at CVPR 2015 on June 11th, 2015 in Boston, MA.
 		</li>
-		<li> Kate is giving a talk about <a href="caffe.berkeleyvision.edu">Caffe</a> at the <a href="http://opendatascicon.com/">Open Data Science Conference</a> on May 30th in Boston, MA. Details <a href="http://opendatascicon.com/schedule/deep-learning/">here</a>.
+		<li> <a href="https://drive.google.com/open?id=0B4IapRTv9pJ1b0xObHVsMmxieHc">Slides</a> from my recent <a href="http://opendatascicon.com/schedule/deep-learning/">tutorial</a> on the deep learning library <a href="caffe.berkeleyvision.edu">Caffe</a> at the <a href="http://opendatascicon.com/">Open Data Science Conference</a> on May 30th in Boston. 
 		</li>
 		<li> <a href="http://lsda.berkeleyvision.org">Large-Scale Detection by Adaptation</a> 7K Category Detection models are now available!
 		</li>
@@ -77,9 +77,9 @@
 		<li>
 		  <a href="./projects.html#data">DeCAF features</a> that achieve the state of the art on the Office domain adaptation dataset are now available for download.
 		</li>
-	    <li> Kate Saenko is co-chair of the <a href="http://www.cvc.uab.es/adas/task-cv2014">TASK-CV Workshop on Transferring and Adapting Source Knowledge in Computer Vision</a>, co-located with ECCV2014.</li>
+	    <li> I am co-chair of the <a href="http://www.cvc.uab.es/adas/task-cv2014">TASK-CV Workshop on Transferring and Adapting Source Knowledge in Computer Vision</a>, co-located with ECCV2014.</li>
 	    <li>Kate Saenko will be giving a <a href="http://www.cvpr2012.org/tutorials">tutorial</a><a href="http://www.cvpr2012.org/tutorials"> at CVPR 2012</a> on Domain Transfer Learning for Vision Applications with Dong Xu and Ivor Tsang.</li>
-	    <li>Kate Saenko is co-organizing the <a href="http://nips.cc/Conferences/2011/Program/event.php?ID=2539"> Workshop on Integrating Language and Vision</span></a>, held at NIPS 2011 in Grenada, Spain.</li>
+	    <li> I am co-organizing the <a href="http://nips.cc/Conferences/2011/Program/event.php?ID=2539"> Workshop on Integrating Language and Vision</span></a>, held at NIPS 2011 in Grenada, Spain.</li>
 	      </big></ul>
 
 
