--- a/derendering.html
+++ b/derendering.html
@@ -60,6 +60,10 @@
 <h2>PROBABILISTIC COLOR DE-RENDERING</h2>
 
 <p>
+<a href="http://vision.seas.harvard.edu/derender/">Project Website</a>
+</p>
+
+<p>
 Most images found on the
 internet are produced by consumer digital cameras, which use
 tone-mapping to create compact, narrow-gamut images that are
@@ -98,7 +102,6 @@ adaptations of two popular applications: multi-exposure imaging and
 photometric stereo. Our results on these applications are better than
 those of corresponding deterministic approaches, especially for
 saturated and out-of-gamut colors.</p>
-
 
 <p>
 <strong>Papers:</strong><br>
