--- a/research.html
+++ b/research.html
@@ -115,7 +115,8 @@
 			    <a href="derendering.html">details</a>
 			  </span>
 			  <span class="links">
-			    <a href="derendering.html">data & code</a>
+		          <a href="http://vision.seas.harvard.edu/derender/">project website</a>
+			  
 			  </span>
 		</p>
 		    <br><br><br>		
