added NSF RI Large project website

--- a/publication.html
+++ b/publication.html
@@ -61,15 +61,26 @@
 
 <h2>2015</h2>
 
-<p> Huijuan Xu; Subhashini Venugopalan; Vasili Ramanishka; Marcus Rohrbach; Kate Saenko
-<a href="http://arxiv.org/abs/1505.05914">A Multi-scale Multiple Instance Video Description Network,</a>
-arXiv preprint arXiv:1505.05914, 2015 </p> 
+<p>
+Huijuan Xu, Subhashini Venugopalan, Vasili Ramanishka, Marcus Rohrbach, Kate Saenko;  
+<a href="http://arxiv.org/abs/1505.05914">A Multi-scale Multiple Instance Video Description Network;</a> 
+arXiv 2015.
+</p>
 
-<p>Donahue, Jeff; Hendricks, Lisa Anne; Guadarrama, Sergio; Rohrbach, Marcus; Venugopalan, Subhashini; Saenko, Kate; Darrell, Trevor; <a href=> Long-term recurrent convolutional networks for visual recognition and description, CVPR, 2015</p>
+<p>
+Jeff Donahue, Lisa Hendricks, Sergio Guadarrama, Marcus Rohrbach, Subhashini Venugopalan, Kate Saenko, Trevor Darrell. 
+<a href="http://arxiv.org/abs/1411.4389">Long-term Recurrent Convolutional Networks for Visual Recognition and Description.</a>
+CVPR 2015.
+[<a href="http://jeffdonahue.com/lrcn/">Project Website & Code</a>]
+</p>
+
+<p>
+Subhashini Venugopalan, Huijun Xu, Jeff Donahue, Marcus Rohrbach, Raymond Mooney, Kate Saenko. 
+<a href="http://www.cs.utexas.edu/~ai-lab/downloadPublication.php?filename=http://www.cs.utexas.edu/users/ml/papers/venugopalan.naacl15.pdf&pubid=127495">Translating Videos to Natural Language Using Deep Recurrent Neural Networks. </a>
+NAACL 2015.
+</p>
 
 <p>Hoffman, Judy; Pathak, Deepak; Darrell, Trevor; Saenko, Kate; <a href=> Detector Discovery in the Wild: Joint Multiple Instance and Representation Learning</a>, CVPR, 2015</p>
-
-<p>Venugopalan, Subhashini; Xu, Huijuan; Donahue, Jeff; Rohrbach, Marcus; Mooney, Raymond; Saenko, Kate; <a href=> Translating Videos to Natural Language Using Deep Recurrent Neural Networks,</a> NAACL, 2015</p>
 
 <p>Peng, Xingchao; Sun, Baochen; Ali, Karim; Saenko, Kate; <a href=> Exploring Invariances in Deep Convolutional Neural Networks Using Synthetic Images,</a> ICLR, Workshop Track, 2014</p>
 
@@ -98,7 +109,11 @@ arXiv preprint arXiv:1505.05914, 2015 </p>
 
 <p> Guadarrama, Sergio; Rodner, Erik; Saenko, Kate; Zhang, Ning; Farrell, Ryan; Donahue, Jeff; Darrell, Trevor; <a href=> Open-vocabulary object retrieval </a>,RSS, 2014	</p>
 
-<p> Thomason, Jesse; Venugopalan, Subhashini; Guadarrama, Sergio; Saenko, Kate; Mooney, Raymond; <a href=> Integrating language and vision to generate natural language descriptions of videos in the wild </a>, Proceedings of the 25th International Conference on Computational Linguistics (COLING), August, 	2014	</p>
+<p>
+J. Thomason, S. Venugopalan, S. Guadarrama, K. Saenko, and R. Mooney. 
+<a href="http://anthology.aclweb.org/C/C14/C14-1115.pdf">Integrating language and vision to generate natural language descriptions of videos in the wild.</a>
+In Proceedings of the 25th International Conference on Computational Linguistics (COLING), August 2014.
+</p>
 
 <p> Hoffman, Judy; Darrell, Trevor; Saenko, Kate; <a href=> Continuous manifold based adaptation for evolving visual domains </a>, Computer Vision and Pattern Recognition (CVPR), 2014 IEEE Conference on, IEEE, 2014	</p>
 
@@ -121,7 +136,13 @@ arXiv preprint arXiv:1505.05914, 2015 </p>
 
 <p> Donahue, Jeff; Hoffman, Judy; Rodner, Erik; Saenko, Kate; Darrell, Trevor; <a href=> Semi-supervised domain adaptation with instance constraints </a>, Computer Vision and Pattern Recognition (CVPR), 2013 IEEE Conference on, IEEE, 2013	</p>
 
-<p> Guadarrama, Sergio; Krishnamoorthy, Niveda; Malkarnenkar, Girish; Venugopalan, Subhashini; Mooney, Raymond; Darrell, Trevor; Saenko, Kate; <a href=> Youtube2text: Recognizing and describing arbitrary activities using semantic hierarchies and zero-shot recognition </a>, Computer Vision (ICCV), 2013 IEEE International Conference on, IEEE, 2013	</p>
+
+<p>
+Sergio Guadarrama, Niveda Krishnamoorthy, Girish Malkarnenkar, Subhashini Venugopalan, Raymond Mooney, Trevor Darrell, and Kate Saenko; 
+<a href="http://www.eecs.berkeley.edu/~sguada/pdfs/2013-ICCV-YouTube2Text-final.pdf">Youtube2text: Recognizing and describing arbitrary activities using semantic hierarchies and zero-shot recognition.</a>
+In IEEE International Conference on Computer Vision (ICCV) 2013.
+[<a href="http://www.eecs.berkeley.edu/~sguada/youtube2text.html">dataset</a>]
+</p>
 
 <p> Huang, Ke; Ding, Xiang; Chen, Guanling; Saenko, Kate; <a href=> Automatic mobile photo tagging using context, </a>	TENCON 2013-2013 IEEE Region 10 Conference (31194), IEEE, 2013	</p>
 
