add link to abstract doc

--- a/nsfriproject/meetings.html
+++ b/nsfriproject/meetings.html
@@ -46,8 +46,7 @@ Hines Convention Center, Room 109<br>
 </ul>
 </p>
 
-<strong>Abstracts</strong>
-<p>Coming soon...</p>
+<strong><a href="https://drive.google.com/open?id=1IwdcyDwpfEmzb2o4VG34MPKkTVIETrCDxc3t_o46kx8&authuser=0">Abstracts</a></strong>
 
       <p>&nbsp;</p>
       <p>&nbsp;</p>
