added dataset links

--- a/research.html
+++ b/research.html
@@ -82,25 +82,49 @@
 	  	<img src="figs/CADmodels.jpg" class="publogo" width = "400 px" >
 		<p> 
 		  <strong>
-		    <a href="http://arxiv.org/pdf/1412.7122v1.pdf">EXPLORING INVARIANCES IN DEEP CONVOLUTIONAL NEURAL NETWORKS USING SYNTHETIC IMAGES</a>
+		    <a href="">WHAT DO DEEP CNNS LEARN ABOUT OBJECTS?</a>
 		  </strong>
 		  <br>
 		      Xingchao Peng, Baochen Sun, Karim Ali, Kate Saenko.
 		      <br>
-			<em>International Conference on Representation Learning, 2015</em>
+			<em>International Conference on Representation Learning, Workshop paper, 2015</em>
 			<br>
-			  <span class="links">
-			    <a href="http://arxiv.org/pdf/1412.7122v1.pdf">pdf</a>
-			  </span>
 			  <span class="links">
 			    <a href="http://arxiv.org/abs/1504.02485">workshop abstract</a>
 			  </span>
 			  <span class="links">
-			    <a href="">details</a>
+			    <a href="http://arxiv.org/pdf/1412.7122v1">arxiv report</a>
 			  </span>
 			  <span class="links">
-			    <a href="">data & code</a>
+			    <a href="http://www.cs.uml.edu/~xpeng/ICLR2015.zip">dataset</a>
 			  </span>
+		</p>
+	    <br><br><br><br>
+	</div>
+        <!--******************************************-->
+	  <div class="publication">
+	  	<img src="figs/bmvc2014.png" class="publogo" width = "400 px" >
+		<p> 
+		  <strong>
+		    <a href="">FROM VIRTUAL TO REALITY: FAST ADAPTATION OF VIRTUAL OBJECT DETECTORS TO REAL DOMAINS</a>
+		  </strong>
+		  <br>
+		      Baochen Sun and Kate Saenko.
+		      <br>
+			<em>British Machine Vision Conference, 2014</em>
+			<br>
+		      <span class="links">
+			<a href="https://github.com/UMassLowell-Vision-Group/bmvc2014/raw/master/bmvc14_paper.pdf">pdf</a>
+		      </span>
+		      <span class="links">
+			<a href=" https://github.com/UMassLowell-Vision-Group/bmvc2014/raw/master/bmvc14_extended_abstract.pdf">extended abstract</a>
+		      </span>
+		      <span class="links">
+			<a href="https://github.com/UMassLowell-Vision-Group/bmvc2014/raw/master/bmvc14_poster.pdf">poster</a>
+		      </span>
+		      <span class="links">
+			<a href="http://www.cs.uml.edu/~bsun/bmvc14.zip">dataset</a>
+		      </span>
 		</p>
 	    <br><br><br><br>
 	</div>
@@ -109,7 +133,7 @@
 	  <div class="publication">
 		<img src="./old_projects_files/Slide2.JPG" class="publogo" width = "400 px" >
 		<p> 
-		<strong>PROBABILISTIC COLOR DE-RENDERING</strong>
+		<strong><a href="derendering.html">PROBABILISTIC COLOR DE-RENDERING</a></strong>
 		      <br><br>
 			  <span class="links">
 			    <a href="derendering.html">details</a>
@@ -125,7 +149,7 @@
 	  <div class="publication">
 		<img src="./old_projects_files/domain_shift.png" class="publogo" width = "400 px" >
 		<p> 
-		<strong>DOMAIN ADAPTATION FOR OBJECT RECOGNITION</strong>
+		<strong><a href="adaptation.html">DOMAIN ADAPTATION FOR OBJECT RECOGNITION</a></strong>
 		      <br><br>
 			  <span class="links">
 			    <a href="adaptation.html">details</a>
@@ -142,7 +166,7 @@
 	  <div class="publication">
 		<img src="./old_projects_files/senses.png" class="publogo" width = "400 px" >
 		<p> 
-		<strong>VISUAL SENSE DISAMBIGUATION</strong>
+		<strong><a href="wisdom.html">VISUAL SENSE DISAMBIGUATION</a></strong>
 		      <br><br>
 			  <span class="links">
 			    <a href="wisdom.html">details</a>
