added news for workshop paper

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
-	      <li> I am co-organizing the <a href="">Future of Datasets in Vision Workshop</a> at CVPR 2015 on June 11th, 2015 in Boston, MA.
+	      <li> We will present <a href="pubs/cvpr2015_workshop_virtual_dataset.pdf">Generating Large Scale Datasets from 3D CAD Models</a> at the <a href="https://sites.google.com/site/cvpr2015futureofdataworkshop/schedule">workshop</a>, initial datasets are available <a href="./research.html#virtual2reality">here</a> and <a href="./research.html#virtualcnn">here</a>.
+	      </li>
+	      <li> I am co-organizing the <a href="https://sites.google.com/site/cvpr2015futureofdataworkshop/schedule">Future of Datasets in Vision Workshop</a> at CVPR 2015 on June 11th, 2015 in Boston, MA.
 		</li>
 		<li> <a href="https://drive.google.com/open?id=0B4IapRTv9pJ1b0xObHVsMmxieHc">Slides</a> from my recent <a href="http://opendatascicon.com/schedule/deep-learning/">tutorial</a> on the deep learning library <a href="caffe.berkeleyvision.edu">Caffe</a> at the <a href="http://opendatascicon.com/">Open Data Science Conference</a> on May 30th in Boston. 
 		</li>
