--- a/research.html
+++ b/research.html
@@ -82,7 +82,7 @@
 	  	<img src="figs/CADmodels.jpg" class="publogo" width = "400 px" >
 		<p> 
 		  <strong>
-		    <a href="">WHAT DO DEEP CNNS LEARN ABOUT OBJECTS?</a>
+		    <a href="" id="virtualcnn">WHAT DO DEEP CNNS LEARN ABOUT OBJECTS?</a>
 		  </strong>
 		  <br>
 		      Xingchao Peng, Baochen Sun, Karim Ali, Kate Saenko.
@@ -106,7 +106,7 @@
 	  	<img src="figs/bmvc2014.png" class="publogo" width = "400 px" >
 		<p> 
 		  <strong>
-		    <a href="">FROM VIRTUAL TO REALITY: FAST ADAPTATION OF VIRTUAL OBJECT DETECTORS TO REAL DOMAINS</a>
+		    <a href="" id="virtual2reality">FROM VIRTUAL TO REALITY: FAST ADAPTATION OF VIRTUAL OBJECT DETECTORS TO REAL DOMAINS</a>
 		  </strong>
 		  <br>
 		      Baochen Sun and Kate Saenko.
@@ -177,7 +177,6 @@
 		</p>
 		    <br><br><br>		
           </div>
-
         <!--******************************************-->
 	<!--end of page content-->
 	</div>
