--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
-	      <li> I am looking for a postdoc starting in September 2015, in the area of activity recognition and description, send email with subject:postdoc and include your CV and list of publications
+	      <li> <font color="red">NEW:</font> I am looking for a postdoc starting in September 2015, in the area of activity recognition and description, send email with subject:postdoc and include your CV and list of publications
 		</li>
 	      <li> We will present <a href="pubs/cvpr2015_workshop_virtual_dataset.pdf">Generating Large Scale Datasets from 3D CAD Models</a> at the <a href="https://sites.google.com/site/cvpr2015futureofdataworkshop/schedule">workshop</a>, initial datasets are available <a href="http://vision.cs.uml.edu/datasets/">here</a>
 	      </li>
