--- a/ksaenko.html
+++ b/ksaenko.html
@@ -65,6 +65,10 @@
 	    <p>I am an Assistant Professor at the <a href="http://www.cs.uml.edu">Computer Science Department at UMass Lowell</a>, and the director of the <a href="http://vision.cs.uml.edu">Computer Vision and Learning Group at UMass Lowell</a>. Previously, I was a Postdoctoral Researcher at the<a href="http://www.icsi.berkeley.edu/"> International Computer Science Institute</a>, a Visiting Scholar at <a href="http://www.eecs.berkeley.edu/">UC Berkeley EECS</a> and a Visiting Postdoctoral Fellow in the <a href="http://www.seas.harvard.edu/">School of Engineering and Applied Science</a> at Harvard University. My research interests are in applications of machine learning to image and language understanding, multimodal perception for autonomous systems, and adaptive intelligent human-computer interfaces.
 	    </p>
 
+<p>
+<font color="red">NEW:</font> I am looking for a postdoc starting in September 2015, in the area of activity recognition and description, send email with subject:postdoc and include your CV and list of publications
+</p>
+      
 <!--
 	      <h2>Synergistic Activities</h2>
 		<li> Co-chair of the <a href="http://www.cvc.uab.es/adas/task-cv2014">TASK-CV Workshop on Transferring and Adapting Source Knowledge in Computer Vision</a>, co-located with ECCV2014.
