--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
 	      <ul><big>
 	      <li> <font color="red">NEW:</font> I am looking for a postdoc starting in September 2015, in the area of activity recognition and description, send email with subject:postdoc and include your CV and list of publications
 		</li>
+	      <li> <font color="red">NEW:</font> 
+Slides from my lecture at the <a href="">Microsoft Machine Learning and Intelligence School</a>, which took place in St Petersburg, Russia, are available here:
+<a href="https://drive.google.com/file/d/0B4IapRTv9pJ1V1N1LUFmUVRDbWc/view?usp=sharing">part1</a>, <a href="https://drive.google.com/file/d/0B4IapRTv9pJ1MmlSc0NtSXdmMmc/view?usp=sharing">part2</a>.
+	      </li>
 	      <li> We will present <a href="pubs/cvpr2015_workshop_virtual_dataset.pdf">Generating Large Scale Datasets from 3D CAD Models</a> at the <a href="https://sites.google.com/site/cvpr2015futureofdataworkshop/schedule">workshop</a>, initial datasets are available <a href="http://vision.cs.uml.edu/datasets/">here</a>
 	      </li>
 	      <li> I am co-organizing the <a href="https://sites.google.com/site/cvpr2015futureofdataworkshop/schedule">Future of Datasets in Vision Workshop</a> at CVPR 2015 on June 11th, 2015 in Boston, MA.
