--- a/teaching.html
+++ b/teaching.html
@@ -111,6 +111,7 @@
   <li><big>91.423/523 Computer Vision</big>
     <ul>
       <li><a href="">Fall 2015</a></li>
+      <li><a href="https://sites.google.com/site/umlcscomputervisionfall2015/">Fall 2014</a></li>
       <li><a href="https://sites.google.com/site/umlcscomputervisionfall2014/">Fall 2014</a></li>
       <li><a href="https://sites.google.com/site/umlcs91550/">Fall 2012</a></li>
     </ul>
