--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 	      <ul><big>
 	      <li> <font color="red">NEW:</font> I am looking for a postdoc starting in September 2015, in the area of activity recognition and description, send email with subject:postdoc and include your CV and list of publications
 		</li>
+		<li> <font color="red">NEW:</font> Our group is co-organizing the <a href="https://sites.google.com/site/tlworkshop2015/">Transfer and Multi-Task Learning: Trends and New Perspectives Workshop</a> at NIPS 2015 on December 12th, 2015 in Montreal, Canada.
+		</li>
 	      <li> <font color="red">NEW:</font> 
 Slides from my lecture at the <a href="">Microsoft Machine Learning and Intelligence School</a>, which took place in St Petersburg, Russia, are available here:
 <a href="https://drive.google.com/file/d/0B4IapRTv9pJ1V1N1LUFmUVRDbWc/view?usp=sharing">part1</a>, <a href="https://drive.google.com/file/d/0B4IapRTv9pJ1MmlSc0NtSXdmMmc/view?usp=sharing">part2</a>.
