--- a/research.html
+++ b/research.html
@@ -59,6 +59,25 @@
 				
 	  <h2>Projects</h2>
 
+        <!--******************************************-->
+ 	<div class="publication">
+ 		<img src="figs/VQA.pdf" class="publogo" width = "400 px" >
+		<p> 
+			<strong>
+			  <a href="" id="VQA">ASK, ATTEND AND ANSWER: EXPLOTING QUESTION-GUIDED SPATIAL ATTENTION FOR VISUAL QUESTION ANSWERING</a>
+			</strong>
+			<br>
+			  Huijuan Xu and Kate Saenko.
+			<br>
+			<!-- <em>In submission for CVPR2015</em> -->
+			<br>
+			  <span class="links">
+			    <a href="http://arxiv.org/pdf/1511.05234v1.pdf">arxiv</a>
+           	 	  </span>
+		</p>
+   		<br><br><br><br>
+	</div>
+
        <!--******************************************-->
 	  <div class="publication">
 	  	<img src="figs/youtube2text.png" class="publogo" width = "400 px" >
