--- a/research.html
+++ b/research.html
@@ -61,16 +61,15 @@
 
         <!--******************************************-->
  	<div class="publication">
- 		<img src="figs/VQA.pdf" class="publogo" width = "400 px" >
+ 		<img src="figs/VQA.png" class="publogo" width = "400 px" height = "140px" >
 		<p> 
 			<strong>
 			  <a href="" id="VQA">ASK, ATTEND AND ANSWER: EXPLOTING QUESTION-GUIDED SPATIAL ATTENTION FOR VISUAL QUESTION ANSWERING</a>
 			</strong>
 			<br>
-			  Huijuan Xu and Kate Saenko.
+			  Huijuan Xu and Kate Saenko
 			<br>
 			<!-- <em>In submission for CVPR2015</em> -->
-			<br>
 			  <span class="links">
 			    <a href="http://arxiv.org/pdf/1511.05234v1.pdf">arxiv</a>
            	 	  </span>
