--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
+	      	<li> <font color="red">NEW:</font> Our paper titled Return of Frustratingly Easy Domain Adaptation (Extended Abstract) has won the <a href="awardTASCK-CV2015-Best.pdf"> best paper award</a> of the TASK-CV'2015.
+		</li>	
 	      	<li> <font color="red">NEW:</font> Our paper titled <a href="http://arxiv.org/abs/1511.05547">Return of Frustratingly Easy Domain Adaptation</a> was accepted to AAAI-16.
 		</li>
 		<li> <font color="red">NEW:</font> Our group is co-organizing the <a href="https://sites.google.com/site/tlworkshop2015/">Transfer and Multi-Task Learning: Trends and New Perspectives Workshop</a> at NIPS 2015 on December 12th, 2015 in Montreal, Canada.
