--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
-	      	<li> <font color="red">NEW:</font> Our paper titled Return of Frustratingly Easy Domain Adaptation (Extended Abstract) has won the <a href="awardTASCK-CV2015-Best.pdf"> best paper award</a> of the TASK-CV'2015.
+	      	<li> <font color="red">NEW:</font> Our paper titled Return of Frustratingly Easy Domain Adaptation (Extended Abstract) has won the <a href="/pubs/awardTASCK-CV2015-Best.pdf"> best paper award</a> of the TASK-CV'2015.
 		</li>	
 	      	<li> <font color="red">NEW:</font> Our paper titled <a href="http://arxiv.org/abs/1511.05547">Return of Frustratingly Easy Domain Adaptation</a> was accepted to AAAI-16.
 		</li>
@@ -88,7 +88,7 @@ Slides from my lecture at the <a href="">Microsoft Machine Learning and Intellig
 		</li>
 		<li> <a href="http://lsda.berkeleyvision.org">Large-Scale Detection by Adaptation</a> 7K Category Detection models are now available!
 		</li>
-		<li> Our paper titled <a href="bmvc14_sun_fromvirtualtoreal.pdf">From Virtual to Reality: Fast Adaptation of Virtual Object Detectors to Real Domains</a> was accepted to BMVC 2014. See also <a href="bmvc14_FromVirtualToReality.pptx">slides</a> from a recent talk.
+		<li> Our paper titled <a href="/pubs/bmvc14_sun_fromvirtualtoreal.pdf">From Virtual to Reality: Fast Adaptation of Virtual Object Detectors to Real Domains</a> was accepted to BMVC 2014. See also <a href="bmvc14_FromVirtualToReality.pptx">slides</a> from a recent talk.
 		</li>
 		<li>
 		  <a href="./projects.html#data">DeCAF features</a> that achieve the state of the art on the Office domain adaptation dataset are now available for download.
