--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</li>	
 	      	<li> <font color="red">NEW:</font> Our paper titled <a href="http://arxiv.org/abs/1511.05547">Return of Frustratingly Easy Domain Adaptation</a> was accepted to AAAI-16.
 		</li>
-		<li> <font color="red">NEW:</font> Our group is co-organizing the <a href="https://sites.google.com/site/tlworkshop2015/">Transfer and Multi-Task Learning: Trends and New Perspectives Workshop</a> at NIPS 2015 on December 12th, 2015 in Montreal, Canada.
+		<li> Our group is co-organizing the <a href="https://sites.google.com/site/tlworkshop2015/">Transfer and Multi-Task Learning: Trends and New Perspectives Workshop</a> at NIPS 2015 on December 12th, 2015 in Montreal, Canada.
 		</li>
 	      	<li> Four papers accepted to ICCV 2015! Here are some spotlights:<br>
 	      		<iframe width="640" height="480" src="https://www.youtube.com/embed/-xNI7e7YgDk?rel=0" frameborder="0" allowfullscreen></iframe>
