--- a/research.html
+++ b/research.html
@@ -61,6 +61,24 @@
 
         <!--******************************************-->
  	<div class="publication">
+ 		<img src="figs/dataset.jpg" class="publogo" width = "400 px" height = "140px" >
+		<p> 
+			<strong>
+			  <a href="" id="Dataset">Building ImageNet in One Day (Generating Large Scale Image Datasets from 3D CAD Models)</a>
+			</strong>
+			<br>
+			  Baochen Sun, Xingchao Peng, and Kate Saenko
+			<br>
+			<em>CVPR Workshop on The Future of Datasets in Vision, 2015</em>
+			<br>
+			  <span class="links">
+		          <a href="http://vision.cs.uml.edu/datasets/">project website</a>
+		</p>
+   		<br><br><br><br>
+	</div>
+
+        <!--******************************************-->
+ 	<div class="publication">
  		<img src="figs/VQA.png" class="publogo" width = "400 px" height = "140px" >
 		<p> 
 			<strong>
@@ -121,7 +139,7 @@
 	</div>
         <!--******************************************-->
 	  <div class="publication">
-	  	<img src="figs/bmvc2014.png" class="publogo" width = "400 px" >
+	  	<img src="figs/bmvc2014.png" class="publogo" width = "400 px"  height = "160px">
 		<p> 
 		  <strong>
 		    <a href="" id="virtual2reality">FROM VIRTUAL TO REALITY: FAST ADAPTATION OF VIRTUAL OBJECT DETECTORS TO REAL DOMAINS</a>
@@ -131,18 +149,8 @@
 		      <br>
 			<em>British Machine Vision Conference, 2014</em>
 			<br>
-		      <span class="links">
-			<a href="https://github.com/UMassLowell-Vision-Group/bmvc2014/raw/master/bmvc14_paper.pdf">pdf</a>
-		      </span>
-		      <span class="links">
-			<a href=" https://github.com/UMassLowell-Vision-Group/bmvc2014/raw/master/bmvc14_extended_abstract.pdf">extended abstract</a>
-		      </span>
-		      <span class="links">
-			<a href="https://github.com/UMassLowell-Vision-Group/bmvc2014/raw/master/bmvc14_poster.pdf">poster</a>
-		      </span>
-		      <span class="links">
-			<a href="http://www.cs.uml.edu/~bsun/bmvc14.zip">dataset</a>
-		      </span>
+			<span class="links">
+		        <a href="http://vision.cs.uml.edu/From-Virtual-to-Reality/">project website</a>
 		</p>
 	    <br><br><br><br>
 	</div>
