updated research with CORAL

--- a/research.html
+++ b/research.html
@@ -59,6 +59,27 @@
 				
 	  <h2>Projects</h2>
 
+
+        <!--******************************************-->
+ 	<div class="publication">
+ 		<img src="figs/CORAL.jpg" class="publogo" width = "400 px" height = "160px" >
+		<p> 
+			<strong>
+			  <a href="" id="CORAL">Correlation Alignment for Unsupervised Domain Adaptation</a>
+			</strong>
+			<br>
+			  Baochen Sun, Jiashi Feng, and Kate Saenko
+			<br>
+			<em>The Thirtieth AAAI Conference on Artificial Intelligence, 2016</em>
+			<em><font color="red">Best Paper Prize</font> of TASK-CV workshop at ICCV'15</em>
+			<br>
+			  <span class="links">
+		          <a href="http://arxiv.org/abs/1511.05547">arXiv preprint</a>
+		</p>
+   		<br><br><br><br>
+	</div>
+
+
         <!--******************************************-->
  	<div class="publication">
  		<img src="figs/dataset.jpg" class="publogo" width = "400 px" height = "140px" >
