updated research with CORAL

--- a/research.html
+++ b/research.html
@@ -70,7 +70,8 @@
 			<br>
 			  Baochen Sun, Jiashi Feng, and Kate Saenko
 			<br>
-			<em>The Thirtieth AAAI Conference on Artificial Intelligence, 2016</em>
+			<em>The Thirtieth AAAI Conference on Artificial Intelligence, 2016 (AAAI-16)</em>
+			<br>
 			<em><font color="red">Best Paper Prize</font> of TASK-CV workshop at ICCV'15</em>
 			<br>
 			  <span class="links">
