--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
-	      	<li> <font color="red">NEW:</font> Our paper titled Return of Frustratingly Easy Domain Adaptation (Extended Abstract) has won the <a href="/pubs/awardTASCK-CV2015-Best.pdf"> best paper award</a> of the TASK-CV workshop at ICCV'2015.
+	      	<li> <font color="red">NEW:</font> Our paper titled Return of Frustratingly Easy Domain Adaptation (Extended Abstract) has won the <a href="/pubs/awardTASCK-CV2015-Best.pdf"> <font color="red">Best Paper Prize</font></a> of the TASK-CV workshop at ICCV'2015.
 		</li>	
 	      	<li> <font color="red">NEW:</font> Our paper titled <a href="http://arxiv.org/abs/1511.05547">Return of Frustratingly Easy Domain Adaptation</a> was accepted to AAAI-16.
 		</li>
