--- a/publication.html
+++ b/publication.html
@@ -59,7 +59,31 @@
 
 	  <h2>Publications</h2>
 
+<h2>2016</h2>
+<p>
+Baochen Sun, Jiashi Feng, Kate Saenko;  
+<a href="http://arxiv.org/abs/1511.05547">Return of Frustratingly Easy Domain Adaptation;</a> 
+AAAI, 2016.
+</p>
+
 <h2>2015</h2>
+<p>
+Baochen Sun, Jiashi Feng, Kate Saenko;  
+<a href="http://arxiv.org/abs/1511.05547">Return of Frustratingly Easy Domain Adaptation (Extended Abstract);</a> 
+<font color="red">Best Paper Prize</font> of TASK-CV Workshop at ICCV, 2015.
+</p>
+
+<p>
+Xingchao Peng, Baochen Sun, Kate Saenko;  
+<a href="http://arxiv.org/abs/1412.7122">Learning Deep Object Detectors from 3D Models;</a> 
+ICCV, 2015.
+</p>
+
+<p>
+Baochen Sun, Kate Saenko;  
+<a href="http://bmvc2015.swansea.ac.uk/proceedings/papers/paper024/index.html">Subspace Distribution Alignment for Unsupervised Domain Adaptation;</a> 
+BMVC, 2015.
+</p>
 
 <p>
 Huijuan Xu, Subhashini Venugopalan, Vasili Ramanishka, Marcus Rohrbach, Kate Saenko;  
