--- a/publication.html
+++ b/publication.html
@@ -86,6 +86,12 @@ BMVC, 2015.
 </p>
 
 <p>
+Baochen Sun, Xingchao Peng, Kate Saenko;  
+<a href="http://vision.cs.uml.edu/datasets/">Generating Large Scale Image Datasets from 3D CAD Models;</a> 
+The Future of Datasets in Vision Workshop at CVPR, 2015.
+</p>
+
+<p>
 Huijuan Xu, Subhashini Venugopalan, Vasili Ramanishka, Marcus Rohrbach, Kate Saenko;  
 <a href="http://arxiv.org/abs/1505.05914">A Multi-scale Multiple Instance Video Description Network;</a> 
 arXiv 2015.
