--- a/publication.html
+++ b/publication.html
@@ -74,7 +74,7 @@ Baochen Sun, Jiashi Feng, Kate Saenko;
 </p>
 
 <p>
-Xingchao Peng, Baochen Sun, Kate Saenko;  
+Xingchao Peng, Baochen Sun, Karim Ali, Kate Saenko;  
 <a href="http://arxiv.org/abs/1412.7122">Learning Deep Object Detectors from 3D Models;</a> 
 ICCV, 2015.
 </p>
