--- a/teaching.html
+++ b/teaching.html
@@ -98,6 +98,7 @@
   <ul>
   <li><big>91.422/545 Machine Learning</big>
     <ul>
+      <li><a href="https://sites.google.com/site/umlcsmachinelearningspring2016">Spring 2016</a></li>
       <li><a href="https://sites.google.com/site/umlcsmachinelearningspring2015">Spring 2015</a></li>
       <li><a href="https://sites.google.com/site/umlcsmachinelearningspring2014">Spring 2014</a></li>
       <li><a href="https://sites.google.com/site/umlcsmlspring2013/">Spring 2013</a></li>
