--- a/index.html
+++ b/index.html
@@ -66,18 +66,22 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
+	      	<li> <font color="red">NEW:</font> Two orals accepted to <a href="http://cvpr2016.thecvf.com/">CVPR 2016</a>: <a href="http://arxiv.org/abs/1511.05284">Deep Compositional Captioning: Describing Novel Object Categories without Paired Training Data</a> and <a href="http://arxiv.org/abs/1511.04164">Natural Language Object Retrieval</a>.
+	      	</li>	
+	      	<li> <font color="red">NEW:</font> Slides from Kate's MIT talk on March 15th <a href="https://drive.google.com/file/d/0B4IapRTv9pJ1eWowSzJBNGh0aFU/view?usp=sharing">Adaptive Deep Learning for Vision and Language.</a>
+	      	</li>	
 	      	<li> <font color="red">NEW:</font> Our paper titled Return of Frustratingly Easy Domain Adaptation (Extended Abstract) has won the <a href="/pubs/awardTASCK-CV2015-Best.pdf"> <font color="red">Best Paper Prize</font></a> of the TASK-CV workshop at ICCV'2015.
 		</li>	
 	      	<li> <font color="red">NEW:</font> Our paper titled <a href="http://arxiv.org/abs/1511.05547">Return of Frustratingly Easy Domain Adaptation</a> was accepted to AAAI-16.
 		</li>
-		<li> <font color="red">NEW:</font> Our group is co-organizing the <a href="https://sites.google.com/site/tlworkshop2015/">Transfer and Multi-Task Learning: Trends and New Perspectives Workshop</a> at NIPS 2015 on December 12th, 2015 in Montreal, Canada.
+		<li> Our group is co-organizing the <a href="https://sites.google.com/site/tlworkshop2015/">Transfer and Multi-Task Learning: Trends and New Perspectives Workshop</a> at NIPS 2015 on December 12th, 2015 in Montreal, Canada.
 		</li>
-	      	<li> <font color="red">NEW:</font> Four papers accepted to ICCV 2015! Here are some spotlights:<br>
+	      	<li> Four papers accepted to ICCV 2015! Here are some spotlights:<br>
 	      		<iframe width="640" height="480" src="https://www.youtube.com/embed/-xNI7e7YgDk?rel=0" frameborder="0" allowfullscreen></iframe>
 			<iframe width="640" height="480" src="https://www.youtube.com/embed/gQMDX1Q2OfY?rel=0" frameborder="0" allowfullscreen></iframe>
 	      	</li>
 	      <li>
-Slides from my lecture at the <a href="">Microsoft Machine Learning and Intelligence School</a>, which took place in St Petersburg, Russia, are available here:
+Slides from Kate's lecture at the <a href="">Microsoft Machine Learning and Intelligence School</a>, which took place in St Petersburg, Russia, are available here:
 <a href="https://drive.google.com/file/d/0B4IapRTv9pJ1V1N1LUFmUVRDbWc/view?usp=sharing">part1</a>, <a href="https://drive.google.com/file/d/0B4IapRTv9pJ1MmlSc0NtSXdmMmc/view?usp=sharing">part2</a>.
 	      </li>
 	      <li> We will present <a href="pubs/cvpr2015_workshop_virtual_dataset.pdf">Generating Large Scale Datasets from 3D CAD Models</a> at the <a href="https://sites.google.com/site/cvpr2015futureofdataworkshop/schedule">workshop</a>, initial datasets are available <a href="http://vision.cs.uml.edu/datasets/">here</a>
