--- a/index.html
+++ b/index.html
@@ -66,9 +66,13 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
-	      	<li> <font color="red">NEW:</font> Two orals accepted to <a href="http://cvpr2016.thecvf.com/">CVPR 2016</a>: <a href="http://arxiv.org/abs/1511.05284">Deep Compositional Captioning: Describing Novel Object Categories without Paired Training Data</a> and <a href="http://arxiv.org/abs/1511.04164">Natural Language Object Retrieval</a>.
+	      	<li> <font color="red">NEW:</font> Two orals accepted to <a href="http://cvpr2016.thecvf.com/">CVPR 2016</a>: 
+	      	<a href="http://arxiv.org/abs/1511.05284">Deep Compositional Captioning: Describing Novel Object Categories 
+	      	without Paired Training Data</a> and <a href="http://arxiv.org/abs/1511.04164">Natural Language Object Retrieval</a>.
 	      	</li>	
-	      	<li> <font color="red">NEW:</font> Slides from Kate's MIT talk on March 15th <a href="https://drive.google.com/file/d/0B4IapRTv9pJ1eWowSzJBNGh0aFU/view?usp=sharing">Adaptive Deep Learning for Vision and Language.</a>
+	      	<li> <font color="red">NEW:</font> Slides from Kate's MIT talk on March 15th: 
+	      	<a href="https://drive.google.com/file/d/0B4IapRTv9pJ1eWowSzJBNGh0aFU/view?usp=sharing">Adaptive Deep Learning for 
+	      	Vision and Language.</a>
 	      	</li>	
 	      	<li> <font color="red">NEW:</font> Our paper titled Return of Frustratingly Easy Domain Adaptation (Extended Abstract) has won the <a href="/pubs/awardTASCK-CV2015-Best.pdf"> <font color="red">Best Paper Prize</font></a> of the TASK-CV workshop at ICCV'2015.
 		</li>	
