--- a/publication.html
+++ b/publication.html
@@ -58,8 +58,22 @@
 	<!--begin page content, edit you own page here-->
 
 	  <h2>Publications</h2>
+<p>For the most up to date list, see this <a href="https://scholar.google.com/citations?hl=en&user=9xDADY4AAAAJ">Google Scholar page.</a> </p>
 
 <h2>2016</h2>
+
+<p>
+Ronghang Hu, Huazhe Xu, Marcus Rohrbach, Jiashi Feng, Kate Saenko, Trevor Darrell,
+<a href="http://arxiv.org/abs/1511.04164">Natural Language Object Retrieval</a>,
+CVPR <font color="red">Oral Presentation</font>, 2016.
+</p>
+
+<p>
+Lisa Anne Hendricks, Subhashini Venugopalan, Marcus Rohrbach, Raymond Mooney, Kate Saenko, Trevor Darrell,
+<a href="http://arxiv.org/abs/1511.05284">Deep Compositional Captioning: Describing Novel Object Categories without Paired Training Data</a>,
+CVPR <font color="red">Oral Presentation</font>, 2016.
+</p>
+
 <p>
 Baochen Sun, Jiashi Feng, Kate Saenko;  
 <a href="http://arxiv.org/abs/1511.05547">Return of Frustratingly Easy Domain Adaptation;</a> 
@@ -67,6 +81,13 @@ AAAI, 2016.
 </p>
 
 <h2>2015</h2>
+
+<p>
+Huijuan Xu and Kate Saenko,
+<a href="http://arxiv.org/abs/1511.05234">Ask, Attend and Answer: Exploring Question-Guided Spatial Attention for Visual Question Answering</a>,
+arXiv 2015.
+</p>
+
 <p>
 Baochen Sun, Jiashi Feng, Kate Saenko;  
 <a href="http://arxiv.org/abs/1511.05547">Return of Frustratingly Easy Domain Adaptation (Extended Abstract);</a> 
@@ -74,8 +95,30 @@ Baochen Sun, Jiashi Feng, Kate Saenko;
 </p>
 
 <p>
-Xingchao Peng, Baochen Sun, Karim Ali, Kate Saenko;  
-<a href="http://arxiv.org/abs/1412.7122">Learning Deep Object Detectors from 3D Models;</a> 
+D. Mrowca, M. Rohrbach, J. Hoffman, R. Hu, K. Saenko, T. Darrell,
+<a href="http://www.cv-foundation.org/openaccess/content_iccv_2015/papers/Mrowca_Spatial_Semantic_Regularisation_ICCV_2015_paper.html">
+Spatial Semantic Regularisation for Large Scale Object Detection</a>,
+Proceedings of the IEEE International Conference on Computer Vision (ICCV), 2015.
+</p>
+
+<p>
+S. Venugopalan, M. Rohrbach, J. Donahue, R. Mooney, T. Darrell, K. Saenko, 
+<a href="http://www.cv-foundation.org/openaccess/content_iccv_2015/html/Venugopalan_Sequence_to_Sequence_ICCV_2015_paper.html"> 
+Sequence to sequence-video to text </a>,
+Proceedings of the IEEE International Conference on Computer Vision (ICCV), 2015.
+</p>
+
+<p>
+Xingchao Peng, Baochen Sun, Karim Ali, Kate Saenko, 
+<a href="http://www.cv-foundation.org/openaccess/content_iccv_2015/html/Peng_Learning_Deep_Object_ICCV_2015_paper.html">
+Learning Deep Object Detectors from 3D Models;</a> 
+ICCV, 2015.
+</p>
+
+<p> 
+E. Tzeng, J. Hoffman, T. Darrell, K. Saenko,
+<a href="http://www.cv-foundation.org/openaccess/content_iccv_2015/html/Tzeng_Simultaneous_Deep_Transfer_ICCV_2015_paper.html">
+Simultaneous Deep Transfer Across Domains and Tasks</a> 
 ICCV, 2015.
 </p>
 
