ben at people page

--- a/people.html
+++ b/people.html
@@ -66,6 +66,7 @@
 		<td><a href="xpeng.html"><img class="personal" src="images/default.png"/></a></td> 
 		<td><a href="huijuan.html"><img class="personal" src="images/huijuanxu.jpg"/></a></td> 
 		<td><a href="ramanishka.html"><img class="personal" src="images/default.png"/></a></td> 
+		<td><a href="#"><img class="personal" src="images/ben.jpg"/></a></td> 
 	      </tr>
 	      <tr>
 		<td><div>Kate Saenko<br/> (Group Leader)</div></td>
@@ -73,6 +74,7 @@
 		<td><div>Xingchao Peng<br/> (PhD Student)</div></td> 
 		<td><div>Huijuan Xu<br/> (PhD Student)</div></td> 
 		<td><div>Vasili Ramanishka<br/> (PhD Student)</div></td> 
+		<td><div>Ben Usman<br/> (Visiting PhD Student)</div></td> 
 	      </tr>
 	    </table>	
 	  <br>
