--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	    <h2>News</h2>				
 	      <ul><big>
 	      	<li> <font color="red">Moving to Boston University</font> Kate has recently accepted an Assistant Professor position in the 
-	      	Computer Science Department of Boston University, and will be moving this summer, along with her group. Stay tuned for the new website.
+	      	<a href="http://www.bu.edu/cs/">Computer Science Department</a> at <a href="http://www.bu.edu/">Boston University</a>, and will be moving this summer, along with her group. Stay tuned for the new website.
 	      	</li>
 	      	<li> <font color="red">NEW:</font> Two orals accepted to <a href="http://cvpr2016.thecvf.com/">CVPR 2016</a>: 
 	      	<a href="http://arxiv.org/abs/1511.05284">Deep Compositional Captioning: Describing Novel Object Categories 
