--- a/ksaenko.html
+++ b/ksaenko.html
@@ -61,8 +61,13 @@
 	    <h2>Professor Kate Saenko</h2>
 	    <img src="images/kate.gif" width="100" height="100"/>	    
 	      <p><a href="pubs/saenkoCV.pdf">Curriculum Vitae</a>
-	      </p>	
-	    <p>I am an Assistant Professor at the <a href="http://www.cs.uml.edu">Computer Science Department at UMass Lowell</a>, and the director of the <a href="http://vision.cs.uml.edu">Computer Vision and Learning Group at UMass Lowell</a>. Previously, I was a Postdoctoral Researcher at the<a href="http://www.icsi.berkeley.edu/"> International Computer Science Institute</a>, a Visiting Scholar at <a href="http://www.eecs.berkeley.edu/">UC Berkeley EECS</a> and a Visiting Postdoctoral Fellow in the <a href="http://www.seas.harvard.edu/">School of Engineering and Applied Science</a> at Harvard University. My research interests are in applications of machine learning to image and language understanding, multimodal perception for autonomous systems, and adaptive intelligent human-computer interfaces.
+	      </p>
+	      <p><font color="red">NEWS:</font> I am joining the 
+	      	<a href="http://www.bu.edu/cs/">Computer Science Department</a> at <a href="http://www.bu.edu/">Boston University</a> as Assistant Professor this summer!
+	      </p>
+	    <p>I am an Assistant Professor at the <a href="http://www.cs.uml.edu">Computer Science Department at UMass Lowell</a>, 
+	    and the director of the <a href="http://vision.cs.uml.edu">Computer Vision and Learning Group at UMass Lowell</a>. 
+	    Previously, I was a Postdoctoral Researcher at the<a href="http://www.icsi.berkeley.edu/"> International Computer Science Institute</a>, a Visiting Scholar at <a href="http://www.eecs.berkeley.edu/">UC Berkeley EECS</a> and a Visiting Postdoctoral Fellow in the <a href="http://www.seas.harvard.edu/">School of Engineering and Applied Science</a> at Harvard University. My research interests are in applications of machine learning to image and language understanding, multimodal perception for autonomous systems, and adaptive intelligent human-computer interfaces.
 	    </p>
 
       
