--- a/publication.html
+++ b/publication.html
@@ -63,6 +63,12 @@
 <h2>2016</h2>
 
 <p>
+Baochen Sun and Kate Saenko,
+<a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation</a>,
+arXiv 2016.
+</p>
+
+<p>
 Ronghang Hu, Huazhe Xu, Marcus Rohrbach, Jiashi Feng, Kate Saenko, Trevor Darrell,
 <a href="http://arxiv.org/abs/1511.04164">Natural Language Object Retrieval</a>,
 CVPR <font color="red">Oral Presentation</font>, 2016.
