--- a/research.html
+++ b/research.html
@@ -76,6 +76,8 @@
 			<br>
 			  <span class="links">
 		          <a href="http://arxiv.org/abs/1511.05547">arXiv preprint of AAAI-16</a>
+		        <br>
+			  <span class="links">
                           <a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation</a>
 		</p>
    		<br><br><br><br>
