--- a/research.html
+++ b/research.html
@@ -75,10 +75,8 @@
 			<em><font color="red">Best Paper Prize</font> of TASK-CV workshop at ICCV'15</em>
 			<br>
 			  <span class="links">
-		          <a href="http://arxiv.org/abs/1511.05547">arXiv preprint of AAAI-16</a>
-		        <br>
-			  <span class="links">
-                          <a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation</a>
+		          <a href="http://arxiv.org/abs/1511.05547">CORAL</a>
+                          <a href="https://arxiv.org/abs/1607.01719">Deep CORAL</a>
 		</p>
    		<br><br><br><br>
 	</div>
