--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
 	      	<li> <font color="red">Moving to Boston University</font> Kate has recently accepted an Assistant Professor position in the 
 	      	<a href="http://www.bu.edu/cs/">Computer Science Department</a> at <a href="http://www.bu.edu/">Boston University</a>, and will be moving this summer, along with her group. Stay tuned for the new website.
 	      	</li>
+	      	<li> <font color="red">NEW:</font> <a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation</a>.
+	      	</li>
 	      	<li> <font color="red">NEW:</font> Two orals accepted to <a href="http://cvpr2016.thecvf.com/">CVPR 2016</a>: 
 	      	<a href="http://arxiv.org/abs/1511.05284">Deep Compositional Captioning: Describing Novel Object Categories 
 	      	without Paired Training Data</a> and <a href="http://arxiv.org/abs/1511.04164">Natural Language Object Retrieval</a>.
-	      	</li>	
+	      	</li>
 	      	<li>  Slides from Kate's MIT talk on March 15th: 
 	      	<a href="https://drive.google.com/file/d/0B4IapRTv9pJ1eWowSzJBNGh0aFU/view?usp=sharing">Adaptive Deep Learning for 
 	      	Vision and Language.</a>
